Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-6642862

Code cache allocation fails with large pages after 6588638

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2 P2
    • hs12
    • 7
    • hotspot
    • gc
    • b02
    • x86
    • windows_2003
    • Not verified

        With JDK7 b23 on Windows Server 2003 64-bit (using the 32-bit JDK):

        C:\> z:\7\b23\windows-i586\fastdebug\bin\java -server -Xmn500m -Xms750m -Xmx750m
        -Xss96k -XX:+UseParallelOldGC -XX:+AggressiveOpts -XX:+PrintCommandLineFlags -XX
        :+UseLargePages -XX:+TracePageSizes -version
        VM option '+UseParallelOldGC'
        VM option '+AggressiveOpts'
        VM option '+PrintCommandLineFlags'
        VM option '+UseLargePages'
        VM option '+TracePageSizes'
        -XX:+AggressiveOpts -XX:MaxHeapSize=786432000 -XX:MaxNewSize=524288000 -XX:NewSi
        ze=524288000 -XX:+PrintCommandLineFlags -XX:ThreadStackSize=96 -XX:+TracePageSiz
        es -XX:+UseLargePages -XX:+UseParallelGC -XX:+UseParallelOldGC
        code heap: min=2359296 max=50331648 pg_sz=2097152 base=0x02000000 size=50331648

        Java HotSpot(TM) Server VM warning: os::commit_memory failed
        Error occurred during initialization of VM
        Could not reserve enough space for code cache


        This is fastdebug; it also fails with product VM. It does not fail in b21.

              jcoomes John Coomes (Inactive)
              sbohne Steve Bohne (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: