6642862: Code cache allocation fails with large pages after 6588638

Reviewed-by: apetrusenko